# fastapi-spark-oracle

./: .gitignore  README.md  compose.yaml  pyproject.toml  tnsnames.ora
app/: async_oracle.py
