[tool.poetry]
name = "fastapi-spark-oracle"
version = "0.1.0"
description = ""
authors = ["grillazz <the@grillazz.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
oracledb = "^2.4.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
